build info controllers, docker injection
